# ambiente_python_2025

./: .env-example  README.md  pyproject.toml  requirements-dev.txt
src/: main.py
src/my_package/: my_module.py
src/package/: module.py
